--- a/teorica_01/slides.tex
+++ b/teorica_01/slides.tex
@@ -67,18 +67,7 @@
 \section{Introducción}
 \input{src/mobile_robotics_introduction.tex}
 
-\section{Trabajo actual}
-\begin{frame}
-    \frametitle{Trabajo actual}
-    \begin{itemize}
-        \item Fusión de sensores (Loosely y Tightly coupled)
-        \item SLAM Relativo (SLAM Multi-Robot y Distribuido)
-        \item Calibración de sensores
-        \item Long-term/Loop Closing en entornos Agrícolas
-    \end{itemize}
-\end{frame}
-
-%\section*{Referencias}
-%\input{src/references.tex}
+\section{Bibliografía}
+\input{src/bibliography.tex}
 
 \end{document}
