--- a/teorica_01/src/mobile_robotics_introduction.tex
+++ b/teorica_01/src/mobile_robotics_introduction.tex
@@ -49,6 +49,9 @@
 
 \begin{frame}
     \frametitle{Aplicaciones de la Robótica}
+    
+    \note{https://robots.ieee.org/learn/types-of-robots/}
+    
 %    \begin{figure}[!h]
 %        \centering
 %        \subfloat[] 
@@ -105,4 +108,11 @@
     \begin{tiny}
         [1] J. J. Leonard - et al., ``Mobile robot localization by ...,'' IEEE Transactions on Robotics and Automation, 2002.
     \end{tiny}
+\end{frame}
+
+
+\begin{frame}
+    \frametitle{Estado del arte}
+
+    \TODO{Comentar los problemas actuales del estado del arte}
 \end{frame}
