Add some information for slides

--- a/teorica_01/src/mobile_robotics_introduction.tex
+++ b/teorica_01/src/mobile_robotics_introduction.tex
@@ -114,5 +114,5 @@
 \begin{frame}
     \frametitle{Estado del arte}
 
-    \TODO{Comentar los problemas actuales del estado del arte}
+    \TODO{Comentar los problemas actuales del estado del arte. Lor problemas al trabajr con sensores que tienen error, dependiendo el entorno y la aplicación que tiene que hacer el robot hay que resolver diferentes problemas. Dar ejemplos, problemas que hay en el agua, en outdoor con la luz, de noche, blur, comentar problemas con las camaras,}
 \end{frame}
