Move files to subfolder

--- a/teoricas/teorica_01/src/mobile_robotics_introduction.tex
+++ b/teoricas/teorica_01/src/mobile_robotics_introduction.tex
@@ -43,6 +43,11 @@
 \end{frame}
 
 \begin{frame}
+    \frametitle{Robots}
+    Primer robot autónomo, poner foto, sacar de buenos aires y chequear.
+\end{frame}
+
+\begin{frame}
     \frametitle{¿Qué es la Robótica?}
     La robótica es la intersección de la ciencia, la ingeniería y la tecnología que produce máquinas, llamadas robots, que sustituyen (o replican) las acciones humanas.
 \end{frame}
@@ -79,7 +84,27 @@
 %            \includegraphics[width=0.33\columnwidth]{./images/introduction/aqua2.png}
 %        }		 
 %    \end{figure}
+
+    Por qué utilizar robots?
+    \begin{itemize}
+        \item Entornos peligrosos para las personas
+        \item Automatización
+        \item Asistencia
+    \end{itemize}
+
 \end{frame}
+
+\begin{frame}
+    \frametitle{Tipos de Robots}
+    
+    Brazos robóticos
+    Robots con patas
+    Robots acuáticos
+    Robots Humanoides
+    Robots aéreos
+    
+\end{frame}
+
 
 \begin{frame}
     \frametitle{Navegación autónoma}
