Add rossums universal robots images

--- a/teoricas/teorica_01/src/mobile_robotics_introduction.tex
+++ b/teoricas/teorica_01/src/mobile_robotics_introduction.tex
@@ -1,9 +1,20 @@
 \begin{frame}
     \frametitle{Un poco de Historia}
     
-    La primera aparición de la palabra robot es utilizada por Karl Capek en 1921 en su obra teatral R. U. R. (Rossum's Universal Robots). La palabra robot viene de la palabra checa \emph{robota} que significa esclavo.
+    La primera aparición de la palabra robot es utilizada por Karl Capek en 1921 en su obra teatral R. U. R. (Rossumovi Univerzální Roboti Rossum's Universal Robots). La palabra robot viene de la palabra checa \emph{robota} que significa esclavo.
     
-    \TODO{agregar imagen obra de teatro wikipedia.}
+    
+    \centering
+    \begin{figure}
+    	\subfloat[]
+    	{
+    		\includegraphics[width=0.2\columnwidth]{rossums_universal_robots_poster.jpg}
+    	}\hfill
+    	\subfloat[]
+    	{
+   			\includegraphics[width=0.5\columnwidth]{rossums_universal_robots_play.jpg}
+    	}
+    \end{figure}
     
     \note{
         Fuente: https://cs.stanford.edu/people/eroberts/courses/soco/projects/1998-99/robotics/history.html\\
