Add robot images

--- a/teoricas/teorica_01/src/mobile_robotics_introduction.tex
+++ b/teoricas/teorica_01/src/mobile_robotics_introduction.tex
@@ -68,45 +68,69 @@
     
     \note{https://robots.ieee.org/learn/types-of-robots/}
     
-%    \begin{figure}[!h]
-%        \centering
-%        \subfloat[] 
-%        {
-%            \includegraphics[width=0.33\columnwidth]{./images/introduction/drone.jpg}
-%        }
-%        \subfloat[] 
-%        {
-%            \includegraphics[width=0.33\columnwidth]{./images/introduction/GoogleCar.jpg}
-%        }
-%        \subfloat[] 
-%        {
-%            \includegraphics[width=0.16\columnwidth]{./images/introduction/industrial_robot.png}
-%        }\\
-%        \subfloat[] 
-%        {
-%            \includegraphics[width=0.33\columnwidth]{./images/introduction/curiosity.png}
-%        }
-%        \subfloat[] 
-%        {
-%            \includegraphics[width=0.33\columnwidth]{./images/introduction/hortibot.png}
-%        }
-%        \subfloat[]
-%        {
-%            \includegraphics[width=0.33\columnwidth]{./images/introduction/aqua2.png}
-%        }		 
-%    \end{figure}
+	\begin{figure}[!h]
+        \centering
+        \subfloat[] 
+        {
+            \includegraphics[width=0.33\columnwidth]{./images/drone.jpg}
+        }
+        \subfloat[] 
+        {
+            \includegraphics[width=0.33\columnwidth]{./images/google_car.jpg}
+        }
+        \subfloat[] 
+        {
+            \includegraphics[width=0.16\columnwidth]{./images/industrial_robot.png}
+        }\\
+        \subfloat[] 
+        {
+            \includegraphics[width=0.33\columnwidth]{./images/curiosity.png}
+        }
+        \subfloat[] 
+        {
+            \includegraphics[width=0.27\columnwidth]{./images/weed_removal_robot.jpg}
+        }
+        \subfloat[]
+        {
+            \includegraphics[width=0.3\columnwidth]{./images/aqua.png}
+        }		 
+    \end{figure}
+\end{frame}
 
-    Por qué utilizar robots?
-    \begin{itemize}
-        \item Entornos peligrosos para las personas
-        \item Automatización
-        \item Asistencia
-    \end{itemize}
+\begin{frame}
+    \frametitle{Aplicaciones de la Robótica}
+
+    \begin{columns}[T] % align columns
+        \begin{column}{.48\textwidth}
+            \begin{itemize}
+                \item Vehículos autónomos
+                \item Industriales 
+                \item Cuidado de la Salud
+                \item Aeroespacial
+                \item Robots de consumo
+                \item Respuesta a desastres/catástrofes
+                \item Drones (UAV)
+            \end{itemize}
+        \end{column}%
+        \hfill%
+        \begin{column}{.48\textwidth}
+            \begin{itemize}
+                \item Educación
+                \item Entretenimiento
+                \item Exoesqueletos
+                \item Humanoides
+                \item Militares
+                \item Investigación
+                \item Telepresencia
+                \item Submarinos
+            \end{itemize}
+        \end{column}%
+    \end{columns}
 
 \end{frame}
 
 \begin{frame}
-    \frametitle{Tipos de Robots}
+    \frametitle{Tipos de Robots según locomoción o entorno}
     
     Brazos robóticos
     Robots con patas
