Add shakey the robot

--- a/teoricas/teorica_01/src/mobile_robotics_introduction.tex
+++ b/teoricas/teorica_01/src/mobile_robotics_introduction.tex
@@ -24,38 +24,59 @@
 \begin{frame}
     \frametitle{Un poco de Historia}
     
-    La palabra \emph{robotics} también fue utilizada por primera vez por Issac Asimov en 1942 en su cuento corto \emph{Runaround} (en español Circuito Vicioso).
-    
-    Primera Ley
-    Un robot no hará daño a un ser humano ni, por inacción, permitirá que un ser humano sufra daño.
-    Segunda Ley
-    Un robot debe cumplir las órdenes dadas por los seres humanos, a excepción de aquellas que entren en conflicto con la primera ley.
-    Tercera Ley
-    Un robot debe proteger su propia existencia en la medida en que esta protección no entre en conflicto con la primera o con la segunda ley.
+    \begin{block}{}
+        La palabra \emph{robotics} también fue utilizada por primera vez por Issac Asimov en 1942 en su cuento corto \emph{Runaround} (en español Circuito Vicioso).
+    \end{block}
+
+    \begin{itemize}
+        \item Primera Ley: Un robot no hará daño a un ser humano ni, por inacción, permitirá que un ser humano sufra daño.
+        \item Segunda Ley: Un robot debe cumplir las órdenes dadas por los seres humanos, a excepción de aquellas que entren en conflicto con la primera ley.
+        \item Tercera Ley: Un robot debe proteger su propia existencia en la medida en que esta protección no entre en conflicto con la primera o con la segunda ley.
+    \end{itemize}
+
     
     \note{The word robotics was also coined by a writer.  Russian-born American science-fiction writer Isaac Asimov first used the word in 1942 in his short story Runabout.  Asimov had a much brighter and more optimistic opinion of the robot's role in human society than did Capek.  He generally characterized the robots in his short stories as helpful servants of man and viewed robots as a better, cleaner race.  Asimov also proposed three "Laws of Robotics" that his robots, as well as sci-fi robotic characters of many other stories.}
 \end{frame}
 
 \begin{frame}
     \frametitle{¿Qué es un Robot?}
+   
+    \begin{block}{Según Robot Institute of America, 1979}
+        Un manipulador reprogramable y multifuncional diseñado para mover material, piezas, herramientas o dispositivos especializados a través de varios movimientos programados para el desempeño de una variedad de tareas.
+    \end{block}
+    
+    \begin{block}{Según la RAE}
+        Máquina o ingenio electrónico programable que es capaz de manipular objetos y realizar diversas operaciones.
+    \end{block}
+    
+    \begin{block}{Una definición que usamos (\url{https://robots.ieee.org/learn/what-is-a-robot/}):}
+        Un robot es una máquina autónoma capaz de sensar su entorno, realizar cálculos para tomar decisiones y realizar acciones en el mundo real.
+    \end{block}
+    
     \note{hay varias definiciones.\\
-        Fuente: https://robots.ieee.org/learn/what-is-a-robot/}
-    
-    Según Robot Institute of America, 1979
-    Un manipulador reprogramable y multifuncional diseñado para mover material, piezas, herramientas o dispositivos especializados a través de varios movimientos programados para el desempeño de una variedad de tareas.
-    
-    Según la RAE
-    Máquina o ingenio electrónico programable que es capaz de manipular objetos y realizar diversas operaciones.
-    
-    Una definición que usamos (https://robots.ieee.org/learn/what-is-a-robot/):
-    Un robot es una máquina autónoma capaz de sensar su entorno, realizar cálculos para tomar decisiones y realizar acciones en el mundo real.
-    
-    \note{}
+    Fuente: https://robots.ieee.org/learn/what-is-a-robot/}
 \end{frame}
 
 \begin{frame}
-    \frametitle{Robots}
-    Primer robot autónomo, poner foto, sacar de buenos aires y chequear.
+    \frametitle{Shakey the robot: el primer robot móvil autónomo}
+    
+   
+    \begin{columns}[T] % align columns
+        \begin{column}{.4\textwidth}
+            \includegraphics[width=\columnwidth]{shakey.png}
+        \end{column}%
+        \hfill%
+        \begin{column}{.56\textwidth}
+            \begin{itemize}
+                \item Creación: 1966 - 1972
+                \item 
+            \end{itemize}
+        \end{column}%
+    \end{columns}
+
+    \note{Fueten: Wikipedia\\
+        An example mission for Shakey might be something like:\\
+        An operator types the command push the block off the platform at a computer console. Shakey looks around, identifies a platform with a block on it, and locates a ramp in order to reach the platform. Shakey then pushes the ramp over to the platform, rolls up the ramp onto the platform, and pushes the block off the platform. Mission accomplished.}
 \end{frame}
 
 \begin{frame}
