Add some text about Shakey robot

--- a/teoricas/teorica_01/src/mobile_robotics_introduction.tex
+++ b/teoricas/teorica_01/src/mobile_robotics_introduction.tex
@@ -24,9 +24,7 @@
 \begin{frame}
     \frametitle{Un poco de Historia}
     
-    \begin{block}{}
-        La palabra \emph{robotics} también fue utilizada por primera vez por Issac Asimov en 1942 en su cuento corto \emph{Runaround} (en español Circuito Vicioso).
-    \end{block}
+    La palabra \emph{robotics} también fue utilizada por primera vez por Issac Asimov en 1942 en su cuento corto \emph{Runaround} (en español Circuito Vicioso).
 
     \begin{itemize}
         \item Primera Ley: Un robot no hará daño a un ser humano ni, por inacción, permitirá que un ser humano sufra daño.
@@ -67,14 +65,16 @@
         \end{column}%
         \hfill%
         \begin{column}{.56\textwidth}
-            \begin{itemize}
-                \item Creación: 1966 - 1972
-                \item 
-            \end{itemize}
+              Desarrollado durante 1966 - 1972 por Stanford Research Institute International (SRI).
+              
+              Resultados: A*, Hough transform y visibility graph.
+              
         \end{column}%
     \end{columns}
 
     \note{Fueten: Wikipedia\\
+        Shakey experienced a limited world. A version of Shakey's world could contain a number of rooms connected by corridors, with doors and light switches available for the robot to interact with.\\
+        The development of Shakey had a far-reaching impact on the fields of robotics and artificial intelligence, as well as computer science in general. Some of the more notable results include the development of the A* search algorithm, which is widely used in pathfinding and graph traversal, the process of plotting an efficiently traversable path between points; the Hough transform, which is a feature extraction technique used in image analysis, computer vision, and digital image processing; and the visibility graph method for finding Euclidean shortest paths among obstacles in the plane\\
         An example mission for Shakey might be something like:\\
         An operator types the command push the block off the platform at a computer console. Shakey looks around, identifies a platform with a block on it, and locates a ramp in order to reach the platform. Shakey then pushes the ramp over to the platform, rolls up the ramp onto the platform, and pushes the block off the platform. Mission accomplished.}
 \end{frame}
@@ -194,6 +194,8 @@
 
 \begin{frame}
     \frametitle{Estado del arte}
+    
+    
 
     \TODO{Comentar los problemas actuales del estado del arte. Lor problemas al trabajr con sensores que tienen error, dependiendo el entorno y la aplicación que tiene que hacer el robot hay que resolver diferentes problemas. Dar ejemplos, problemas que hay en el agua, en outdoor con la luz, de noche, blur, comentar problemas con las camaras,}
 \end{frame}
