Add Wall-e poster image

--- a/teoricas/teorica_01/src/mobile_robotics_introduction.tex
+++ b/teoricas/teorica_01/src/mobile_robotics_introduction.tex
@@ -1,4 +1,9 @@
 \begin{frame}
+	\frametitle{Robots de ficción}
+     \includegraphics[width=\columnwidth]{wheres_wall_e_poster.jpg}
+\end{frame}
+
+\begin{frame}
     \frametitle{Un poco de Historia}
     
     La primera aparición de la palabra robot es utilizada por Karl Capek en 1921 en su obra teatral R. U. R. (Rossumovi Univerzální Roboti Rossum's Universal Robots). La palabra robot viene de la palabra checa \emph{robota} que significa esclavo.
