--- a/teoricas/teorica_02/src/locomotion.tex
+++ b/teoricas/teorica_02/src/locomotion.tex
@@ -1,5 +1,5 @@
 \begin{frame}
-    \frametitle{Locomocióm}
+    \frametitle{Locomoción}
     El humano copia a la naturaleza para construir tipos de locomoción.
     Mostrar ejemplos del libro Figura 2.1. animales y robots reales.
     
@@ -18,7 +18,7 @@
 
 
 \begin{frame}
-    \frametitle{Locomocióm}
+    \frametitle{Locomoción}
     Ventajas y desventajas de robots con patas:
     
     Ventajas: permite ir por terrenos irregulares, reducen el impacto ambiental dado que tienen menos puntos de contacto.
