--- a/teoricas/teorica_02/src/sensors.tex
+++ b/teoricas/teorica_02/src/sensors.tex
@@ -28,3 +28,65 @@
 \end{frame}
 
 
+\begin{frame}
+	\frametitle{Bumper}
+	
+\end{frame}
+
+\begin{frame}
+	\frametitle{Sensor cámara}
+
+\end{frame}
+
+\begin{frame}
+	\frametitle{Sensor encoders}
+	
+\end{frame}
+
+\begin{frame}
+	\frametitle{Sensor Ultrasónico}
+	
+\end{frame}
+
+\begin{frame}
+	\frametitle{Compass}
+	
+\end{frame}
+
+\begin{frame}
+	\frametitle{Giróscopo}
+	
+\end{frame}
+
+\begin{frame}
+	\frametitle{Acelerómetro}
+	
+\end{frame}
+
+\begin{frame}
+	\frametitle{Láser 2D}
+	
+\end{frame}
+
+\begin{frame}
+	\frametitle{Láser 3D}
+	
+\end{frame}
+
+\begin{frame}
+	\frametitle{Cámara basada en eventos}
+	
+\end{frame}
+
+\begin{frame}
+	\frametitle{Global Positionning System (GPS)}
+	
+\end{frame}
+
+\begin{frame}
+	\frametitle{GPS-RTK}
+	
+\end{frame}
+
+
+
