--- a/teoricas/teorica_02/slides.tex
+++ b/teoricas/teorica_02/slides.tex
@@ -1,6 +1,7 @@
 % Estas slides tienen que abrirse con el programa pdfpc que soporta videos embebidos
 % el comando es: pdfpc -g slides.pdf
 % para los videos se requiere ubuntu-restricted-extras
+% para la bibliografía se requiere biber y configurar texstudio
 
 
 %\documentclass[compress,handout]{beamer}
@@ -43,6 +44,8 @@
 \renewcommand*{\bibfont}{\footnotesize} % change bibliograhy size
 \bibliography{./src/bibliography.bib}
 
+% Graphic paths
+\graphicspath{{./images/}}
 
 % add math preamble
 %\input{./math_preamble}
