Add mobile robot scheme

--- a/teoricas/teorica_01/src/mobile_robotics_introduction.tex
+++ b/teoricas/teorica_01/src/mobile_robotics_introduction.tex
@@ -161,6 +161,13 @@
 \end{frame}
 
 \begin{frame}
+    \frametitle{Esquema de control de un robot móvil}
+    \centering
+    \includegraphics[width=0.9\columnwidth]{mobile_robot_scheme.pdf}
+\end{frame}
+
+
+\begin{frame}
     \frametitle{Tipos de Robots según locomoción o entorno}
 
     Brazos robóticos
