Improve locomotion slides

--- a/teoricas/teorica_01/src/mobile_robotics_introduction.tex
+++ b/teoricas/teorica_01/src/mobile_robotics_introduction.tex
@@ -4,6 +4,11 @@
 \end{frame}
 
 \begin{frame}
+    \frametitle{Agregar un timeline de robotica}
+    \TODO{Agregar un timeline de robotica}
+\end{frame}
+
+\begin{frame}
 	\frametitle{Robots de ficción}
 	\TODO{Agregar slides de robots de ficción. como Hace peter corke: https://robotacademy.net.au/masterclass/introduction-to-robotics/?lesson=211}
 \end{frame}
@@ -218,4 +223,13 @@
     Analizar los problemas que puedan aparecer en ciertas aplicaciones...
 
     \note{Comentar los problemas actuales del estado del arte. Lor problemas al trabajr con sensores que tienen error, dependiendo el entorno y la aplicación que tiene que hacer el robot hay que resolver diferentes problemas. Dar ejemplos, problemas que hay en el agua, en outdoor con la luz, de noche, blur, comentar problemas con las camaras}
+\end{frame}
+
+\begin{frame}
+    \frametitle{Impacto de la robótica}
+    
+    Filosofemos...
+    Revolución industrial.
+    
+    \note{Filosofía de la robótica}
 \end{frame}
