--- a/teoricas/teorica_02/src/locomotion.tex
+++ b/teoricas/teorica_02/src/locomotion.tex
@@ -1,3 +1,4 @@
+
 \begin{frame}
     \frametitle{Locomoción}
     El humano copia a la naturaleza para construir tipos de locomoción.
@@ -5,7 +6,7 @@
     
     \begin{itemize}
         \item Caminar
-        \item correr
+        \item Correr
         \item
     \end{itemize}
     
@@ -16,6 +17,34 @@
     
 \end{frame}
 
+
+\begin{frame}
+    \frametitle{Locomoción}
+    
+    Manipulación: un brazo robótica está fijo y mueve objetos en su espacio de trabajo aplicando fuerza sobre ellos.
+    
+    Locomoción: el entorno está fijo y el robot se mueve impartiendo fuerza sobre el entorno.
+    \begin{itemize}
+        \item Estabilidad
+        \begin{itemize}
+            \item Geometría y Número de puntos de contacto
+            \item Centro de gravedad
+            \item Estabilidad estática y dinámica
+            \item Inclinación del terreno
+        \end{itemize}
+        \item Característica de contacto
+        \begin{itemize}
+            \item Punto de contacto/ distancia y forma de camino
+            \item Ángulo de contacto
+            \item Fricción
+        \end{itemize}
+        \item Tipo de entorno
+        \begin{itemize}
+            \item Estructura
+            \item Medio (agua, aire, terreno suave o firme)
+        \end{itemize}
+    \end{itemize}
+\end{frame}
 
 \begin{frame}
     \frametitle{Locomoción}
